# AI-Customer-Support-Automatiom-Scaler-hackthon-

./: Dockerfile  README.md  Readnew.md  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
files (2)/: Dockerfile  env.py  inference.py  models.py  requirements.txt  tasks.py
