[project]
name = "ai-incident-response-openenv"
version = "1.0.0"
description = "AI Incident Response & IT Ops Automation OpenEnv"
authors = [
    {name = "Shubhankar Pandey"},
    {name = "Meera Singh"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.openenv]
entry_point = "env:IncidentResponseEnv"
